--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,15 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/Concurrent.Thread.js"></script>
+        <script type="text/javascript">
+        var num=1;
+        Concurrent.Thread.create(function(){
+            $("h1").append("Texto "+num);
+            Concurrent.Thread.sleep(1000);
+        });
+        </script>
     </head>
     <body>
         
