--- a/www/index.html
+++ b/www/index.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <meta charset="UTF-8">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <title>GeolocationOnBackground</title>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <script type="text/javascript" src="cordova.js"></script>
+         <script type="text/javascript" src="js/Concurrent.Thread.js"></script>
+         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/Concurrent.Thread.js"></script>
-        <script type="text/javascript">
-        var num=1;
-        Concurrent.Thread.create(function(){
-            while(1)
-            {
-                $("h1").append("Texto "+num+"<br>");
-                Concurrent.Thread.sleep(1000);
-                num=num+1;
-            }
-        });
-        </script>
-    <body>
+    <body onload="onLoad()">
         
         <center>
             <h1>HolaGatho<br></h1>
