--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+        <meta charset="UTF-8">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <title>GeolocationOnBackground</title>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <script type="text/javascript" src="cordova.js"></script>
+         <script type="text/javascript" src="js/Concurrent.Thread.js"></script>
+         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-    </head>
-    <body>
+    <body onload="onLoad()">
         
         <center>
-            <h1>HolaGatho</h1>
+            <h1>HolaGatho<br></h1>
         </center>
         
     </body>
